--- a/coursestyle.css
+++ b/coursestyle.css
@@ -1,7 +1,7 @@
 .body {
-	font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .header__title {
-	font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
